
2011-04-19:
 - run sudo npm install config
 - configuration system added
   run as:
   $ cd stanzr
   $ node node/main/lib/main.js -config ./conf/node/<configname>.js
   where configname is one of demo, staging, design

2011-04-22:
 - npm updates:
   sudo npm install oauth
   sudo npm install cookies
   sudo npm install xml2js

2011-04-29
 - npm updates:
 sudo npm install twitter

2011-05-04:
  - seneca update
  cd node/support/seneca
  git pull

2011-05-05:
  - custom nowjs version that auto restarts
  cd node/support
  git clone git@github.com:rjrodger/now.git



