@@ -46,8 +46,10 @@ var assert   = exports.assert    = require('assert')
 var eyes     = exports.eyes      = require('eyes')
 var cookies  = exports.cookies   = require('cookies')
 var _        = exports._         = require('underscore')
-var oauth    = exports.oauth     = require('oauth')
 var url      = exports.url       = require('url')
+
+
+//var oauth    = exports.oauth     = require('oauth')
 
 
 var twitter  = exports.twitter   = require('twitter')
