@@ -192,6 +192,11 @@ div.post_content {
   h4 {float: left;}
   
   .post_actions {float: right;}
+
+  div.moderator {
+    color: #ccc;
+    float: left;
+  }
 }
 
 span.count {
