@@ -188,7 +188,7 @@ if( 'done' == val.chat.state ) {
           <div class="post_content">
 
             <div class="clearfix">
-              <h4></h4>
+              <h4></h4><div class="moderator hide">&nbsp;&nbsp;&nbsp;moderator</div>
               <div class="post_actions">
 
                 <a class="imgbtn sprite-at-reply" title="Mention or send a Reply">&nbsp;</a>
