@@ -28,5 +28,11 @@
   git clone git@github.com:rjrodger/now.git
 
 
+2011-05-06:
+  - custom node-oauth version for facebook avatars
+  cd node/support
+  git clone git@github.com:rjrodger/node-oauth.git
+
+
 
 
